--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ android.nonTransitiveRClass=true
 
 
 #???????  http://??:???/repository/maven-releases/
-RELEASE_REPOSITORY_URL=http://xxxxxxxxxxx/repository/maven-releases/
+RELEASE_REPOSITORY_URL=https://github.com/Tudie/JitPacTest/repository/maven-releases/
 #maven???????
 USERNAME=yangguangrush@gmail.com
 PASSWORD=YG1992Love19
